--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ requests-oauthlib==1.2.0
 sqlparse==0.2.4
 stripe==2.27.0
 urllib3==1.24.2
-mysqlclient==1.4.6
 whitenoise==5.1.0
 dj-database-url==0.5.0
-psycopg2==2.8.5
+psycopg2-binary==2.8.5
